# Plonky3

./: Cargo.toml
gen-blake3/: Cargo.toml
gen-blake3/src/: main.rs
gen-keccak/: Cargo.toml
gen-keccak/src/: main.rs
gen-poseidon/: Cargo.toml
gen-poseidon/src/: main.rs
gen-poseidon2/: Cargo.toml
gen-poseidon2/src/: main.rs
gen-rescue/: Cargo.toml
gen-rescue/src/: main.rs
