[package]
name = "gen-poseidon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-poseidon2 = { path = "../poseidon2" }
gcd = "2.3.0"
p3-field = { path = "../field" }
p3-symmetric = { path = "../symmetric" }
p3-mds = { path = "../mds" }
rand = { version = "0.8.5", features = ["min_const_gen"] }

p3-mersenne-31 = { path = "../mersenne-31" }
p3-baby-bear = { path = "../baby-bear" }
p3-koala-bear = { path = "../koala-bear" }
p3-bn254-fr = { path = "../bn254-fr" }
p3-goldilocks = { path = "../goldilocks" }
