[package]
name = "gen-rescue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-rescue = { path = "../rescue" }

gcd = "2.3.0"
itertools = "0.13.0"
modinverse = "0.1.1"
num = "0.4.0"
num-integer = "0.1.45"
p3-field = { path = "../field" }
p3-mds = { path = "../mds" }
p3-symmetric = { path = "../symmetric" }
p3-util = { path = "../util" }
rand = "0.8.5"
sha3 = "0.10.8"

p3-baby-bear = { path = "../baby-bear" }
p3-goldilocks = { path = "../goldilocks" }
p3-mersenne-31 = { path = "../mersenne-31" }